# GeetFS

./: CMakeLists.txt  main.cpp
data/id/cmt1/: file1.txt
data/id/cmt2/: file1-.txt  file2.txt
data/id/cmt3/: cmtName.txt  file3.txt
data/id/cmt4/: cmtName.txt
data/id/cmt4/cmt2/: cmtName.txt
data/id/cmt4/cmt3/: file1.txt
data/id/cmt4/cmt3/cmt1/: cmtName.txt
data/uncommited/: file3.txt
form/: mainwindow.ui
include/: Command.h  Commit.h  File.h  GeetFS.h  Serializer.h  mainwindow.h
resources/: data.txt  resources.qrc
src/: Command.cpp  Commit.cpp  File.cpp  GeetFS.cpp  Serializer.cpp  mainwindow.cpp
